--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -4,9 +4,9 @@ body {
 }
 
 .center {
-	top: 50px;
+	top: 25px;
 	width: 1000px;
-	height: 600px;
+	height: 800px;
 }
 
 .button1 {
@@ -50,4 +50,11 @@ body {
 #version {
 	position: relative;
 	top: 30px;
+}
+
+.link1 {
+	font-size: 1rem !important;
+	position: relative;
+	top: 50px;
+	color: white !important;
 }
