--- a/app/application/src/css/index.css
+++ b/app/application/src/css/index.css
@@ -4,6 +4,10 @@ body {
 	overflow-y: scroll;
 }
 
+h4 {
+	font-size: 1.5rem;
+}
+
 .center {
 	top: 80px;
 	width: 1000px;
@@ -67,11 +71,6 @@ body {
 	top: 30px;
 }
 
-#version {
-	position: relative;
-	top: 10px;
-}
-
 .file {
 	width: 0.1px;
 	height: 0.1px;
@@ -81,6 +80,7 @@ body {
 	z-index: -1;
 }
 
+/* grid */
 .grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -105,12 +105,15 @@ body {
 .div1 {
 	grid-area: 1 / 1 / 2 / 2;
 }
+
 .div2 {
 	grid-area: 1 / 2 / 2 / 3;
 }
+
 .div3 {
 	grid-area: 1 / 3 / 2 / 4;
 }
+
 .div4 {
 	grid-area: 2 / 1 / 3 / 4;
 	align-items: center;
@@ -132,7 +135,7 @@ body {
 	color: rgb(0, 0, 0);
 	background-color: white;
 	border-color: white;
-	font-size: 1rem;
+	font-size: 1.5rem;
 	padding: 15px 30px;
 	border-radius: 30px;
 	cursor: text;
@@ -166,4 +169,9 @@ input:focus::placeholder {
 input:hover::placeholder {
 	transition: 0.2s ease-in;
 	color: transparent;
+}
+
+.text3 {
+	position: relative;
+	top: 10px;
 }
