--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -1,12 +1,7 @@
-body {
-	background: rgb(0, 0, 0);
-	background: linear-gradient(90deg, rgba(0, 0, 0, 1) 30%, rgba(42, 36, 36, 1) 100%);
-}
-
 .center {
 	top: -50px;
 	width: 1000px;
-	height: 1850px;
+	height: 2250px;
 }
 
 .button1 {
@@ -32,16 +27,6 @@ body {
 	border-color: white;
 }
 
-#password_input2 {
-	position: relative;
-	top: 20px;
-}
-
-#password_label2 {
-	position: relative;
-	top: 20px;
-}
-
 #button1 {
 	position: relative;
 	top: 45px;
@@ -52,4 +37,63 @@ body {
 	position: relative;
 	top: 50px;
 	color: white !important;
+}
+
+hr {
+	margin-top: 30px;
+	color: white;
+}
+
+/* tabs */
+.tab {
+	overflow: hidden;
+
+	text-align: center;
+}
+
+.tabcontent {
+	animation: fadeEffect 1s;
+}
+
+@keyframes fadeEffect {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+#shortcuts {
+	display: none;
+}
+
+/* grid */
+.grid {
+	display: grid;
+	grid-template-columns: 0.5fr 1fr 0.5fr;
+	grid-template-rows: 0.5fr;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	margin-bottom: 30px;
+}
+
+.div1 {
+	grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+	grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+	grid-area: 1 / 3 / 2 / 4;
+}
+
+.text {
+	position: relative;
+	left: 130px;
+}
+
+.button {
+	position: relative;
+	right: 130px;
 }
