--- a/app/application/src/css/index.css
+++ b/app/application/src/css/index.css
@@ -5,10 +5,6 @@ body {
 	background: rgb(20, 20, 20);
 }
 
-:root {
-	--df_gray: rgb(10, 10, 10);
-}
-
 h4 {
 	font-size: 1.5rem;
 }
@@ -151,7 +147,7 @@ h4 {
 }
 
 .input2:hover {
-	background-color: var(--df_gray);
+	background-color: var(--df_primary_background);
 	color: white;
 	border-color: white;
 }
