--- a/src/dragonfly@1.4.0.scss
+++ b/src/dragonfly@1.4.0.scss
@@ -338,3 +338,16 @@ h4 {
 .details2 > :not(summary) {
 	margin-top: 0;
 }
+
+::-webkit-scrollbar-track {
+	background-color: #292a2d;
+}
+
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #000000;
+}
