--- a/src/dragonfly@1.4.0.scss
+++ b/src/dragonfly@1.4.0.scss
@@ -397,3 +397,11 @@ h4 {
 	cursor: pointer;
 	transition: 0.2s ease-in;
 }
+
+.online {
+	background-color: green;
+}
+
+.offline {
+	background-color: red;
+}
