--- a/src/dragonfly@1.4.0.scss
+++ b/src/dragonfly@1.4.0.scss
@@ -352,6 +352,10 @@ h4 {
 	background-color: #000000;
 }
 
+::-webkit-scrollbar-corner {
+	background: #292a2d;
+}
+
 /* popup */
 .popup {
 	padding: 15px;
