--- a/app/edit/src/css/index.css
+++ b/app/edit/src/css/index.css
@@ -102,3 +102,10 @@ hr {
 .rollback {
 	display: none;
 }
+
+.warning {
+	color: red;
+	font-weight: bold;
+	margin-top: 30px;
+	font-size: 2rem;
+}
