--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -121,3 +121,10 @@ hr {
 #experimental {
 	display: none;
 }
+
+.warning {
+	color: red;
+	font-weight: bold;
+	margin-top: 30px;
+	font-size: 2rem;
+}
