--- a/src/dragonfly@1.4.0.scss
+++ b/src/dragonfly@1.4.0.scss
@@ -27,8 +27,8 @@ body {
 
 /* selection */
 ::selection {
-	color: var(--df_tertiary_color);
-	background: black;
+	color: white;
+	background: gray;
 }
 
 /* all */
