--- a/src/dragonfly@1.4.0.css
+++ b/src/dragonfly@1.4.0.css
@@ -26,8 +26,8 @@ body {
 
 /* selection */
 ::selection {
-  color: var(--df_tertiary_color);
-  background: black;
+  color: white;
+  background: gray;
 }
 
 /* all */
