App update improvements #115

--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -148,3 +148,8 @@ input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+.link {
+	cursor: pointer;
+	text-decoration: underline;
+}
