--- a/app/export/src/css/index.css
+++ b/app/export/src/css/index.css
@@ -105,6 +105,9 @@
 img {
 	filter: blur(6px);
 	transition: 0.4s ease-in;
+	padding: 30px;
+	background-color: white;
+	border-radius: 30px;
 }
 
 img:hover {
