--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -82,16 +82,7 @@ hr {
 	grid-template-rows: 1fr;
 	grid-row-gap: 0px;
 	margin-bottom: 30px;
-}
-
-.div1 {
-	grid-area: 1 / 1 / 2 / 2;
-}
-.div2 {
-	grid-area: 1 / 2 / 2 / 3;
-}
-.div3 {
-	grid-area: 1 / 3 / 2 / 4;
+	column-gap: 150px;
 }
 
 .text {
@@ -105,6 +96,7 @@ hr {
 }
 
 .buttoni {
+	margin: 3px;
 	color: black;
 	background: white;
 	border: 1px solid var(--df_primary_color);
@@ -154,6 +146,10 @@ hr {
 }
 
 #experimental {
+	display: none;
+}
+
+#codes {
 	display: none;
 }
 
