Edit codes improvements

--- a/app/edit/src/css/index.css
+++ b/app/edit/src/css/index.css
@@ -26,7 +26,7 @@
 .input1:hover {
 	color: white;
 	border-color: white;
-	background-color: black;
+	background-color: transparent;
 }
 
 #button1 {
@@ -69,7 +69,7 @@ hr {
 
 .buttoni:hover {
 	border: 1px solid var(--df_primary_color);
-	background: black;
+	background: transparent;
 	color: var(--df_primary_color);
 }
 
@@ -85,7 +85,7 @@ hr {
 	border-radius: 30px;
 	margin: 0 auto;
 	margin-top: 20px;
-	width: 600px;
+	width: 66.666667%;
 	height: 300px;
 }
 
@@ -101,4 +101,29 @@ hr {
 
 .rollback {
 	display: none;
+}
+
+.buttonm {
+	color: black;
+	background: white;
+	border: 1px solid black;
+	font-size: 1.25rem;
+	padding: 15px 30px;
+	border-radius: 30px;
+	cursor: pointer;
+	text-decoration: none;
+	transition: 0.2s ease-in;
+	text-align: center;
+	width: 18rem;
+}
+
+.buttonm:hover {
+	border-color: white;
+	background: transparent;
+	color: white;
+}
+
+.buttonm > svg {
+	position: relative;
+	top: 4px;
 }
