--- a/app/settings/src/css/index.css
+++ b/app/settings/src/css/index.css
@@ -24,7 +24,7 @@ body {
 	color: black;
 	background-color: white;
 	border-color: white;
-	width: 250px;
+	width: 14rem;
 }
 
 .input1:hover {
@@ -189,4 +189,29 @@ input::-webkit-inner-spin-button {
 	padding-bottom: 100px;
 	text-align: center;
 	background-color: rgb(10, 10, 10);
+}
+
+.buttonm2 {
+	color: black;
+	background: white;
+	border: 1px solid black;
+	font-size: 1.25rem;
+	padding: 15px 30px;
+	border-radius: 30px;
+	cursor: pointer;
+	text-decoration: none;
+	transition: 0.2s ease-in;
+	text-align: center;
+	width: 18rem;
+}
+
+.buttonm2:hover {
+	border-color: white;
+	background: transparent;
+	color: white;
+}
+
+.buttonm2 > svg {
+	position: relative;
+	top: 4px;
 }
