Redesigned confirm window #125

--- a/app/confirm/src/css/index.css
+++ b/app/confirm/src/css/index.css
@@ -1,48 +1,19 @@
 .center {
-	top: 80px;
+	top: 50px;
 	width: 1000px;
 	height: 530px;
 }
 
-.button1 {
-	color: black;
-	background-color: white;
-	border-color: white;
-}
-
-.button1:hover {
-	color: white;
-	border-color: white;
-}
-
 .input1 {
-	color: black;
-	background-color: white;
-	border-color: white;
-	width: 250px;
+	width: 226px;
 }
 
-.input1:hover {
-	color: white;
-	border-color: white;
+#password_input:hover ~ #show_pass_0 {
+	transition: 0.2s ease-in;
+	stroke: white;
 }
 
-#password_input2 {
-	position: relative;
-	top: 20px;
-}
-
-#password_label2 {
-	position: relative;
-	top: 20px;
-}
-
-#button1 {
-	position: relative;
-	top: 30px;
-}
-
-#version {
-	position: relative;
-	top: 30px;
+#password_input:hover ~ #show_pass_01 {
+	transition: 0.2s ease-in;
+	stroke: white;
 }
